--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.0.0",
     "realm": "^10.2.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
@@ -28,6 +30,7 @@
     "@babel/runtime": "^7.8.4",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components-react-native": "^5.1.1",
     "@types/uuid": "^8.3.0",
