--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.0.0",
     "realm": "^10.2.0",
     "styled-components": "^5.2.1",
