--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
