--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
+    // "@typescript-eslint/no-use-before-define": ["error"],
     "react/react-in-jsx-scope": "off",
     "import/extensions": [
       "error",
