--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.0.0",
     "realm": "^10.2.0",
     "styled-components": "^5.2.1",
@@ -35,7 +37,9 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.168",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-svg-charts": "^5.0.7",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components-react-native": "^5.1.1",
