--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.9",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -18,6 +19,8 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.43.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-get-random-values": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
