--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^8.0.0",
+    "react-number-format": "^4.5.0",
     "realm": "^10.2.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
